--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-pro-sidebar": "0.7.1",
+    "react-router-dom": "4.3.1",
     "react-scripts": "5.0.1",
     "styled-components": "5.0.1",
     "web-vitals": "^2.1.4"
